--- a/RegisterForm.html
+++ b/RegisterForm.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <title>Реєстрація Інвентарю</title>
-</head>
+<html>
+
 <body>
-    <h1>Додати нову річ</h1>
-    <form action="/register" method="POST" enctype="multipart/form-data">
-        <div>
-            <label for="name">Назва (Inventory Name):</label><br>
-            <input type="text" id="name" name="inventory_name" required>
-        </div>
-        <br>
-        <div>
-            <label for="description">Опис (Description):</label><br>
-            <textarea id="description" name="description"></textarea>
-        </div>
-        <br>
-        <div>
-            <label for="photo">Фото:</label><br>
-            <input type="file" id="photo" name="photo" accept="image/*">
-        </div>
-        <br>
-        <button type="submit">Зареєструвати</button>
-    </form>
+
+  <h2>Inventory Registration</h2>
+
+  <form method="post" action="/register" enctype="multipart/form-data">
+    <label for="note_name_input">Name:</label><br>
+    <input type="text" id="inventory_name" name="inventory_name"><br><br>
+    <label for="note_input">Description:</label><br>
+    <textarea id="description" name="description" rows="4" cols="50"></textarea><br><br>
+    <label for="photo">Photo:</label><br>
+    <input type="file" id="photo" name="photo"><br><br>
+    <button type="submit">Register</button>
+  </form>
+
 </body>
+
 </html>
