--- a/SearchForm.html
+++ b/SearchForm.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <title>Пошук Інвентарю</title>
-</head>
+<html>
 <body>
-    <h1>Пошук речі за ID</h1>
-    <form action="/search" method="POST" enctype="application/x-www-form-urlencoded">
-        <div>
-            <label for="id">Серійний номер (ID):</label><br>
-            <input type="text" id="id" name="id" required>
-        </div>
-        <br>
-        <div>
-            <input type="checkbox" id="has_photo" name="has_photo" value="yes">
-            <label for="has_photo">Показати фото у результатах?</label>
-        </div>
-        <br>
-        <button type="submit">Знайти</button>
+    <h1>Inventory Search</h1>
+    <form action="/search" method="GET">
+        <label for="id">ID:</label>
+        <input type="text" id="id" name="id" required>
+        <input type="checkbox" id="includePhoto" name="includePhoto">
+        <label for="includePhoto">Include photo in description</label>
+        <button type="submit">Search</button>
     </form>
 </body>
 </html>
